Bug 1391181 - Reimplement the quaternion to Tait-Bryan conversion for device orientation events. r=snorp, a=lizzard